[package]
name = "server-maintainer"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }
